# knowrob_addons

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  SVN_EXPORT  comp_missingobj.launch  mainpage.dox  manifest.xml  stack.xml
bosch_semantic_map/: .gitignore  CMakeLists.txt  package.xml
bosch_semantic_map/owl/: kitchenobjects.owl
bosch_semantic_map/prolog/: bosch_semantic_map.pl  init.pl
comp_germandeli/: .gitignore  CMakeLists.txt  manifest.xml  package.xml  rosdoc.yaml
comp_germandeli/owl/: .gitignore  comp_germandeli.owl
comp_germandeli/prolog/: init.pl
comp_missingobj/: CMakeLists.txt  SVN_EXPORT  manifest.xml  package.xml
comp_missingobj/owl/: comp_missingobj.owl  comp_missingobj.owl.in  comp_missingobj_offline.owl
comp_missingobj/prolog/: comp_missingobj.pl  comp_missingobj_offline.pl  comp_missingobj_offline.pl.in  init.pl  init.pl.in
comp_mocap/: CMakeLists.txt  package.xml
comp_mocap/scripts/: csv_tf_publisher.py  mocap_marker.py  tf_dynamic_transform.py  tf_restamper.py  xsens_client.py  xsens_tf_broadcaster.py
knowrob_addons/: CMakeLists.txt  package.xml
knowrob_addons/comp_ehow/: .gitignore  manifest.xml
knowrob_addons/comp_germandeli/: package.xml
knowrob_addons/comp_missingobj/: package.xml
knowrob_addons/knowrob_cad_models/: package.xml
knowrob_addons/knowrob_cad_parser/: CMakeLists.txt
knowrob_addons/knowrob_cram/: build.gradle  settings.gradle
knowrob_addons/knowrob_omics/: CMakeLists.txt
knowrob_addons/knowrob_openprs_interface/: manifest.xml
knowrob_addons/knowrob_roslog_launch/: package.xml
knowrob_addons/knowrob_sim/: package.xml
knowrob_addons/mod_action_visualization/: CMakeLists.txt
knowrob_addons/mod_dialog/: rosdoc.yaml
knowrob_addons/semantic_map_to_owl/: CMakeLists.txt  settings.gradle
knowrob_assembly/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
knowrob_assembly/knowrob_assembly/: build.gradle
knowrob_assembly/launch/: assembly_knowrob.launch  assembly_knowrob_sim.launch  battat_scene1.launch  battat_scene2.launch  battat_scene3.launch  boxy_battat.launch  boxy_battat_no_rviz.launch  boxy_battat_sim.launch  boxy_battat_sim_no_rviz.launch
knowrob_assembly/owl/: assemblages_test.owl  assembly_map_test.owl  assembly_parts_test.owl  assembly_test.owl  battat_airplane_simulation.owl  battat_airplane_test.owl  battat_barcelona_19.owl  battat_barcelona_19_1.owl  battat_barcelona_19_2.owl  battat_iai_18.owl  battat_kautham_planning.owl  battat_scene1.owl  battat_scene2.owl  battat_scene3.owl  battat_simulation.owl  battat_strategy.owl  battat_strategy_test.owl  battat_toys.owl  knowrob_assembly.owl
knowrob_assembly/prolog/: assembly_perform.pl  cram_assembly.pl  init.pl  knowrob_assembly.pl  knowrob_assembly.plt  knowrob_battat.pl  knowrob_battat.plt  ogp_assembly.pl
knowrob_beliefstate/: CMakeLists.txt  package.xml  setup.py
knowrob_beliefstate/launch/: beliefstate.launch
knowrob_beliefstate/owl/: knowrob_beliefstate.owl
knowrob_beliefstate/prolog/: init.pl  knowrob_beliefstate.pl  knowrob_beliefstate.plt
knowrob_beliefstate/src/: kr_beliefstate.cpp  tf_listener.cpp
knowrob_beliefstate/srv/: DirtyObject.srv  GetTF.srv
knowrob_cad_models/: .gitignore  192.168.2.102  CMakeLists.txt  Makefile  package.xml
knowrob_cad_models/owl/: knowrob_cad_models.owl  knowrob_cad_models.owl.in
knowrob_cad_models/prolog/: init.pl  knowrob_cad_models.pl
knowrob_cad_parser/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
knowrob_cad_parser/knowrob_cad_parser/: build.gradle
knowrob_cad_parser/prolog/: init.pl
knowrob_chemlab/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
knowrob_chemlab/dictionaries/: adt0.owl  catalog-v001.xml  dictionary.xml  dictionary_cram.xml  mongo.xml  prac.xml
knowrob_chemlab/knowrob_chemlab/: build.gradle
knowrob_chemlab/owl/: acat-adt.owl  acat-adt_example.owl  acat-adt_example_pipetting.owl  acat.owl  acat_example.owl  chemlab-actions.owl  chemlab-log_review-2016.owl  chemlab-map_review-2015.owl  chemlab-map_review-2016.owl  chemlab-objects.owl  chemlab-substances.owl  chemlab.owl  chemlab_map.owl  knowrob_chemlab.owl
knowrob_chemlab/prolog/: init.pl  knowrob_chemlab.pl
knowrob_chemlab/scripts/: CramEpisodicMemoryToADT  EpisodicMemoryToADT
knowrob_cloud_logger/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
knowrob_cloud_logger/jrosbridge/: build.gradle  pom.xml
knowrob_cloud_logger/knowrob_cloud_logger/: build.gradle
knowrob_cloud_logger/oeclient/: build.gradle
knowrob_cloud_logger/owl/: room73b2.owl
knowrob_cloud_logger/prolog/: init.pl  knowrob_cloud_logger.pl
knowrob_cloud_logger/scripts/: LoggerClientTestClient
knowrob_cram/: .gitignore  CMakeLists.txt  build.gradle  manifest.xml  package.xml
knowrob_cram/knowrob_cram/: build.gradle
knowrob_cram/launch/: knowrob_cram.launch
knowrob_cram/owl/: knowrob_cram.owl  knowrob_cram.owl.in  srdl_cram.owl
knowrob_cram/prolog/: comp_execution_trace.pl  cram_assembly.pl  cram_assembly.plt  init.pl  knowrob_cram.pl  knowrob_designators.pl  knowrob_log_data.pl  knowrob_plan_logs.pl
knowrob_kautham/: CMakeLists.txt  package.xml
knowrob_kautham/config/: yumi.rviz
knowrob_kautham/launch/: empty_world.xml  only_objects.launch
knowrob_kautham/owl/: battat_airplane_simulation.owl  battat_airplane_test.owl  battat_toys.owl  knowrob_kautham.owl
knowrob_kautham/prolog/: init.pl  knowrob_kautham.pl
knowrob_kautham/src/: kauthamwrapper.cpp  world2map.cpp
knowrob_learning/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
knowrob_motion_constraints/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
knowrob_omics/: CMakeLists.txt  package.xml
knowrob_omics/prolog/: init.pl  (+1 more)
knowrob_openease/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
knowrob_openprs_interface/: CMakeLists.txt  mainpage.dox
knowrob_paramserver/: CMakeLists.txt  package.xml
knowrob_planning/: CMakeLists.txt  package.xml
knowrob_robcog/: CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
(+3548 files in other folders)
