<package>
  <name>bosch_semantic_map</name>
  <version>1.0.0</version>
  <description>
    Semantic maps of different kitchens at Bosch RTC Palo Alto, created from 3D laser scans.
  </description>

  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>GPL</license>

  <url type="website">http://www.ros.org/wiki/bosch_semantic_map</url>

  <author>Dejan Pangercic</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>comp_spatial</build_depend>
  <build_depend>json_prolog</build_depend>

  <run_depend>comp_spatial</run_depend>
  <run_depend>json_prolog</run_depend>

</package>