<package>
  <name>comp_germandeli</name>
  <version>1.0.0</version>
  <description>Interface between KnowRob and the ODUfinder perception system
     for recognizing objects from the GermanDeli online shop. The
     package further provides information about these objects in
     form of an OWL ontology and utilities for generating the OWL
     representation given the XML log file created by the GermanDeli
     crawler.</description>
   <maintainer email="knowrob@tenorth.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/comp_germandeli</url>

  <author>Moritz Tenorth</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob_common</build_depend>

  <run_depend>knowrob_common</run_depend>

</package>