<?xml version="1.0"?>
<package>
  <name>knowrob_assembly</name>
  <version>0.1.0</version>
  <description>Upper ontology for representing assembly processes.</description>
  <maintainer email="asil@cs.uni-bremen.de">Mihai Pomarlan</maintainer>

  <license>BSD</license>

  <url type="website"></url>

  <author>Mihai Pomarlan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>knowrob_common</build_depend>
  <build_depend>knowrob_paramserver</build_depend>
  <build_depend>knowrob_planning</build_depend>

  <!--
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  -->
  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_paramserver</run_depend>
  <run_depend>knowrob_planning</run_depend>

</package>
