<?xml version="1.0"?>
<package>
  <name>knowrob_beliefstate</name>
  <version>0.1.0</version>
  <description>beliefstate about objects.</description>
  <maintainer email="asil@cs.uni-bremen.de">Mihai Pomarlan</maintainer>

  <license>BSD</license>

  <url type="website"></url>

  <author>Mihai Pomarlan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!--
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>
  -->
  <build_depend>knowrob_common</build_depend>
  <build_depend>knowrob_paramserver</build_depend>
  <build_depend>knowrob_assembly</build_depend>
  <build_depend>message_generation</build_depend>
  <!--
  <build_depend>roslib</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>rosprolog</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  -->
  
  <run_depend>message_runtime</run_depend>
  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_paramserver</run_depend>
  <run_depend>knowrob_assembly</run_depend>
  <!--
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  -->
  <!--
  <run_depend>roslib</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>rosprolog</run_depend>
  <run_depend>roscpp</run_depend>
  -->

</package>
