<package>
  <name>knowrob_cad_models</name>
  <version>1.0.0</version>
  <description>a package which contains CAD Models (3D Models) used in mod_vis package.</description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/knowrob_cad_models</url>

  <author>Stefan Profanter</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob_common</build_depend>
  <build_depend>jpl</build_depend>
  <build_depend>rosjava_jni</build_depend>

  <run_depend>knowrob_common</run_depend>
  <run_depend>jpl</run_depend>
  <run_depend>rosjava_jni</run_depend>

</package>