<package>
  <name>knowrob_cad_models</name>
  <version>1.0.0</version>
  <description>a package which contains CAD Models (3D Models) used in mod_vis package.</description>
  <maintainer email="knowrob@tenorth.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/knowrob_cad_models</url>

  <author>Stefan Profanter</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob_common</build_depend>
  <build_depend>iai_cad_downloader</build_depend>

  <run_depend>knowrob_common</run_depend>
  <run_depend>iai_cad_downloader</run_depend>

</package>