<package>
  <name>knowrob_chemlab</name>
  <version>1.0.0</version>
  <description>knowrob_chemlab</description>
  <maintainer email="lisca@cs.uni-bremen.de">Gheorghe Lisca</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/knowrob_chemlab</url>

  <author>Gheorghe Lisca</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>

  <build_depend>knowrob_common</build_depend>
  <build_depend>knowrob_cram</build_depend>
  <build_depend>comp_temporal</build_depend>
  <build_depend>knowrob_mongo</build_depend>
  <build_depend>srdl</build_depend>
  <build_depend>knowrob_sim_games</build_depend>
  <build_depend>knowrob_cram</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>

  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_cram</run_depend>
  <run_depend>srdl</run_depend>
  <run_depend>comp_temporal</run_depend>
  <run_depend>knowrob_mongo</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  <run_depend>rosjava_messages</run_depend>

</package>
