<?xml version="1.0"?>
<package>
  <name>knowrob_cloud_logger</name>
  <version>0.1.0</version>
  <description>knowrob_cloud_logger</description>
  <maintainer email="asil@cs.uni-bremen.de">Asil Kaan Bozcuoglu</maintainer>

  <license>BSD</license>

  <url type="website"></url>

  <author>Asil Kaan Bozcuoglu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>
    
  <build_depend>knowrob_common</build_depend>
  <build_depend>knowrob_mongo</build_depend>
  <build_depend>knowrob_cram</build_depend>

  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_cram</run_depend>
  <run_depend>knowrob_mongo</run_depend>
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>

</package>
