<package>
  <name>knowrob_cram</name>
  <version>1.0.0</version>
  <description>knowrob_cram

     Ontologies, definitions and computables for the integration of the
     KnowRob knowledge base and the CRAM plan-based executive.</description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/knowrob_cram</url>

  <author>Moritz Tenorth</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob_mongo</build_depend>

  <run_depend>knowrob_mongo</run_depend>

</package>