<?xml version="1.0"?>
<package>
  <name>knowrob_kautham</name>
  <version>0.1.0</version>
  <description>Interface to Kautham</description>
  <maintainer email="pomarlan@uni-bremen.de">Mihai Pomarlan</maintainer>

  <license>BSD</license>

  <url type="website"></url>

  <author>Mihai Pomarlan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob_common</build_depend>
  <build_depend>knowrob_paramserver</build_depend>
  <build_depend>knowrob_planning</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>kautham</build_depend>

  <!--
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  -->
  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_paramserver</run_depend>
  <run_depend>knowrob_planning</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>kautham</run_depend>

</package>
