<package>
  <name>knowrob_learning</name>
  <version>1.0.0</version>
  <description>knowrob_learning</description>
  <maintainer email="asil@cs.uni-bremen.de">Asil Kaan Bozcuoglu</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/knowrob_learning</url>

  <author>Asil Kaan Bozcuoglu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob_common</build_depend>
  <build_depend>knowrob_mongo</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>

  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_mongo</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  <run_depend>rosjava_messages</run_depend>

</package>
