<package>
  <name>knowrob_motion_constraints</name>
  <version>1.0.0</version>
  <description>knowrob_motion_constraints</description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/knowrob_motion_constraints</url>

  <author>Moritz Tenorth</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_jni</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>knowrob_mesh_reasoning</build_depend>
  <build_depend>knowrob_cad_models</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>json_prolog</build_depend>
  <build_depend>mod_srdl</build_depend>

  <run_depend>rosjava_jni</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>knowrob_mesh_reasoning</run_depend>
  <run_depend>knowrob_cad_models</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>json_prolog</run_depend>
  <run_depend>mod_srdl</run_depend>

</package>