<package>
  <name>knowrob_motion_constraints</name>
  <version>1.0.0</version>
  <description>knowrob_motion_constraints</description>
  <maintainer email="knowrob@tenorth.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/knowrob_motion_constraints</url>

  <author>Moritz Tenorth</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>srdl</build_depend>
  <build_depend>knowrob_actions</build_depend>
  <build_depend>knowrob_objects</build_depend>
  <build_depend>knowrob_mesh_reasoning</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>srdl</run_depend>
  <run_depend>knowrob_actions</run_depend>
  <run_depend>knowrob_objects</run_depend>
  <run_depend>knowrob_mesh_reasoning</run_depend>

</package>
