<package>
  <name>knowrob_omics</name>
  <version>1.0.0</version>
  <description>knowrob_omics</description>
  <maintainer email="knowrob@tenorth.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/knowrob_omics</url>

  <author>Lars Kunze</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob_common</build_depend>

  <run_depend>knowrob_common</run_depend>

</package>