<package>
  <name>knowrob_openease</name>
  <version>1.0.0</version>
  <description>knowrob_openease</description>
  <maintainer email="danielb@cs.uni-bremen.de">Daniel Beßler</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/knowrob_openease</url>

  <author>Daniel Beßler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob_common</build_depend>
  <build_depend>comp_temporal</build_depend>
  <build_depend>knowrob_mongo</build_depend>
  <build_depend>knowrob_vis</build_depend>
  <build_depend>knowrob_cram</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>knowrob_common</run_depend>
  <run_depend>comp_temporal</run_depend>
  <run_depend>knowrob_mongo</run_depend>
  <run_depend>knowrob_vis</run_depend>
  <run_depend>knowrob_cram</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  <run_depend>rosjava_messages</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>

</package>
